@@ -7,6 +7,8 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Changed
 
+* IS_VARTMPFS does not check Trixie or later
+
 ### Fixed
 
 ### Deprecated
